# atem

./: .gitignore  .travis-functions.sh  .travis.yml  ChangeLog  LICENSE  Makefile.am  README  atem.pro  configure.ac  extract_glibc_objects
doc/: Makefile.am  author.h2m
src/: Makefile.am  atem.cpp  atem.ggo  boobs.h  ftoa.c  itoa.c  main.c  metastock.cpp  metastock.h  ms_file.cpp  ms_file.h  printf_fp.c  src.pro  test_xtoa.c  util.cpp  util.h
src/glibc/: assert  config.h  iconv  include  inet  io  libio  locale  math  misc  nptl  posix  resolv  setjmp  signal  socket  stdio-common  stdlib  string  sysdeps  time  wcsmbs
test/: Makefile.am  atem-test.sh  bbfinance.01.atst  bbfinance.02.atst  bbfinance.03.atst  bbfinance.04.atst  bbfinance.05.atst  bbfinance.06.atst  equis.01.atst  equis.02.atst  equis.03.atst  equis.04.atst  equis.05.atst  equis.06.atst  equis.07.atst  equis.08.atst  equis.1.atst  float-x.01.atst  float-x.02.atst  format.01.atst  format.02.atst  format.03.atst  format.04.atst  format.05.atst  format.06.atst  format.07.atst  format.08.atst  format.09.atst  mininge.01.atst  mininge.02.atst  msdir_bbfinance.tar.xz  msdir_equis_a.tar.xz  msdir_equis_b.tar.xz  msdir_mininge.tar.xz  msdir_stooq.tar.xz  odds.01.atst  odds.02.atst  odds.03.atst  odds.04.atst  odds.05.atst  (+9 more)
